# general_ledger_button

./: CREATE_REPORT_INSTRUCTIONS.md  FIX_INSTRUCTIONS.md  MANIFEST.in  PROJECT_DOCUMENTATION.md  QUERY_REPORT_FIX.md  README.md  apps.txt  pyproject.toml  setup.py
general_ledger_button/: hooks.py  modules.txt  print_utils.py
general_ledger_button/public/js/: surgi_general_ledger.js  surgi_general_ledger_button.js  surgi_gl_print.js
general_ledger_button/report/surgi_general_ledger/: surgi_general_ledger.js  surgi_general_ledger.json  surgi_general_ledger.py  surgi_general_ledger.pybak
